# cargo-release

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  typos.toml
.github/: renovate.json5  settings.yml
.github/workflows/: ci.yml  post-release.yml
docs/: reference.md
src/: config.rs  diff.rs  error.rs  lib.rs
src/ops/: cargo.rs  cmd.rs  git.rs  index.rs  mod.rs  replace.rs  shell.rs  version.rs
src/steps/: changes.rs  commit.rs  config.rs  hook.rs  mod.rs  owner.rs  plan.rs  publish.rs  push.rs  release.rs  replace.rs  tag.rs  version.rs
tests/testsuite/: main.rs
tests/testsuite/version/downgrade_error/: mod.rs
tests/testsuite/version/dry_run/: mod.rs
tests/testsuite/version/ignore_dependent/: mod.rs
tests/testsuite/version/set_absolute_version/: mod.rs
tests/testsuite/version/set_absolute_workspace_version/: mod.rs
tests/testsuite/version/set_relative_version/: mod.rs
tests/testsuite/version/set_relative_workspace_version/: mod.rs
tests/testsuite/version/upgrade_compatible_dependency/: mod.rs
tests/testsuite/version/upgrade_incompatible_dependency/: mod.rs
tests/testsuite/version/upgrade_workspace/: mod.rs
tests/testsuite/version/virtual_workspace_deps/: mod.rs
tests/testsuite/version/workspace_deps/: mod.rs
tests/testsuite/version/workspace_version_exclude/: mod.rs
tests/testsuite/version/workspace_version_subset/: mod.rs
